2011-10-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: automake error our on invalid TEST_EXTENSIONS
	This change fixes automake bug#9400.
	* automake.in (handle_tests): Bail out if a suffix specified in
	TEST_EXTENSIONS would produce an invalid `xxx_LOG_COMPILER'
	variable or an invalid suffix rule.  Before this change, automake
	would have issued a confusing error messages (about invalid or
	non-POSIX variables being defined), and in some situations would
	have even produced a broken `Makefile.in' file.
	($TEST_EXTENSION_PATTERN): New helper variable.
	* doc/automake.texi (Simple Tests using parallel-tests): Document
	the limitations on TEST_EXTENSIONS explicitly.
	* NEWS: Update.
	* tests/test-extensions.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-09-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: don't suggest installing `.m4' files in hard-coded location
	This change fixes automake bug#7988.
	* doc/automake.texi (aclocal Options): State that the use of
	the `--print-ac-dir' option to determine the directory where
	third-party packages can install their `.m4' files is discouraged
	now.
	(Extending aclocal): Suggest telling the user about ACLOCAL_PATH.
	* THANKS: Update.
	Report by Peter Johansson.

2011-09-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	distuninstallcheck: fail also when only one file is left installed
	This change fixes automake bug#9579.
	* lib/am/distdir.am (distuninstallcheck): Be stricter in ignoring
	a potential `dir' file created by install-info and left installed.
	Also, be more careful about "this can't happen" kind of errors.
	(am__distuninstallcheck_listfiles): New internal helper macro.
	* tests/distcheck-pr9579.test: New test.
	* tests/distcheck-override-infodir.test: Likewise.
	* tests/Makefile.am (TESTS): Add them.
	* NEWS, THANKS: Update.
	Report by Nick Bowler.

2011-09-28  Stefano Lattarini  <stefano.lattarini@gmail.com>
