@@ -1,3 +1,10 @@
+2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	coverage: expose automake bug#9651
+	* tests/dist-auxfile.test: New test, xfailing.
+	* tests/dist-auxfile-2.test: Likewise.
+	* tests/Makefile.am (TESTS, XFAIL_TESTS): Add them.
+
 2011-10-01  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	parallel-tests: automake error our on invalid TEST_EXTENSIONS
